# TacControl

./: .gitignore  .gitmodules  Folder.DotSettings  LICENSE  README.md
.github/: FUNDING.yml
.github/workflows/: arma.yml
doc/: ExtToGame.txt  NetworkToExt.txt  NetworkToGame.txt  ScriptToExt.txt
notes/: GitHub - DY357LXLogitech-G15-SDK The default SDK for the Logitech G15 keyboard..URL  GitHub - DotSpatialDotSpatial Geographic information system library written for .NET.URL  GitHub - kakwalibemf2svg Microsoft (MS) EMF to SVG conversion library.URL  Logitech G Developer Lab.URL  NetworkLayout.txt
src/: TacControl.sln
src/AndroidClient/TacControl/: TacControl.sln
src/ArmaExt/: CMakeLists.txt  README.md
src/ArmaExt/src/: CMakeLists.txt
src/ArmaExt/src/Game/: GameManager.cpp  GameManager.hpp  GameMessage.hpp
src/ArmaExt/src/Modules/: ModuleACE.cpp  ModuleACE.hpp  ModuleCore.cpp  ModuleCore.hpp  ModuleGPS.cpp  ModuleGPS.hpp  ModuleGameInfo.cpp  ModuleGameInfo.hpp  ModuleImageDirectory.cpp  ModuleImageDirectory.hpp  ModuleLogitechG15.cpp  ModuleLogitechG15.hpp  ModuleMarker.cpp  ModuleMarker.hpp  ModuleNote.cpp  ModuleNote.hpp  ModuleRadio.cpp  ModuleRadio.hpp  ModuleStreamManager.cpp  ModuleStreamManager.hpp  ModuleVehicle.cpp  ModuleVehicle.hpp  RadioModule.cpp  RadioModule.hpp
src/ArmaExt/src/Networking/: NetworkController.cpp  NetworkController.hpp  Serialize.cpp  Serialize.hpp  websocket.cpp  websocket.hpp
src/ArmaExt/src/Util/: AllModuleHeaders.hpp  GeneratePboList.cpp  Logger.cpp  Logger.hpp  Module.hpp  Thread.cpp  Thread.hpp  Util.cpp  Util.hpp
src/ArmaScript/: hemtt.toml  mod.cpp
src/ArmaScript/tools/: make.cfg
src/DesktopClient/: .editorconfig  App.config  App.xaml  App.xaml.cs  HelicopterControlButtons.xaml  HelicopterControlButtons.xaml.cs  LayerList.xaml  LayerList.xaml.cs  LayerListItem.xaml  LayerListItem.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  MapCreateMarker.xaml  MapCreateMarker.xaml.cs  MapEditGPS.xaml  MapEditGPS.xaml.cs  MapView.xaml  MapView.xaml.cs  MapViewWindow.xaml  MapViewWindow.xaml.cs  Networking.cs  NoteWidget.xaml  ObservableDictionary.cs  RadioTransmitButtons.xaml  RadioTransmitButtons.xaml.cs  RadioWidget.xaml  RadioWidget.xaml.cs  RadioWindow.xaml  RadioWindow.xaml.cs  TacControl.csproj  TacControl.sln  TacControl.sln.DotSettings  packages.config
src/DesktopClient/BigWidgets/: AirHUDWidget.xaml  AirHUDWidget.xaml.cs  HelicopterControlButtons.xaml  HelicopterControlButtons.xaml.cs  NoteWidget.xaml.cs  NotesList.xaml  NotesList.xaml.cs  RadioSettingsList.xaml  RadioSettingsList.xaml.cs  RadioWidget.xaml  RadioWidget.xaml.cs
src/DesktopClient/Dialogs/: DialogExportMarkers.xaml  DialogExportMarkers.xaml.cs  DialogImportMarkers.xaml  DialogImportMarkers.xaml.cs  DialogNetworkDirectConnect.xaml  DialogNetworkDirectConnect.xaml.cs  DialogOptions.xaml  DialogOptions.xaml.cs
src/DesktopClient/DockFramework/: LayoutInitializer.cs  PanesStyleSelector.cs  PanesTemplateSelector.cs  RelayCommand.cs  Workspace.cs
src/DesktopClient/DockViewModels/: PaneViewModel.cs  ToolViewModel.cs  UserControlViewModel.cs  ViewModelBase.cs
src/DesktopClient/MediterranianWidgets/: ACEExplosives.xaml  ACEExplosives.xaml.cs  MapMarkerOverview.xaml  MapMarkerOverview.xaml.cs  NetworkConnectWidget.xaml  NetworkConnectWidget.xaml.cs  RadioSettings.xaml  RadioSettings.xaml.cs  RadioTransmitButtons.xaml.cs
src/DesktopClient/Misc/: JsonLayoutSerializer.cs  MapControl.cs  SKElement.cs  SKGLWpfControl.cs
src/DesktopClient/Properties/: Annotations.cs  AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
src/DesktopClient/TinyWidgets/: ACEExplosive.xaml  ACEExplosive.xaml.cs  BorderTextLabel.cs  MapCursor.xaml  MapCursor.xaml.cs  MarkerVisibilityElement.xaml  MarkerVisibilityElement.xaml.cs
src/TacControl.Common/: Annotations.cs  EventSystem.cs  FodyWeavers.xsd  GameState.cs  Networking.Beacon.cs  Networking.cs  ObservableDictionary.cs  TacControl.Common.csproj  Utility.cs
src/TacControl.Common/Config/: AppConfig.cs
src/TacControl.Common/Maps/: BitmapRenderer.cs  BoundBox.cs  GPSTrackerFeature.cs  GPSTrackerProvider.cs  GridWidget.cs  GridWidgetRenderer.cs  Helper.cs  ImageStyleRenderer.cs  MapMarkerProvider.cs  MapRenderer.cs  MarkerCache.cs  MarkerIconRenderer.cs  MarkerIconStyle.cs  MarkerLabelRenderer.cs  MarkerLabelStyle.cs  MarkerVisibilityManager.cs  NullStyle.cs  PictureRenderer.cs  PointRenderer.cs  PolylineMarkerRenderer.cs  PolylineMarkerStyle.cs  RasterizingLayer.cs  SharedDisposable.cs  SvgStyle.cs  SvgStyleLazy.cs  SvgStyleRenderer.cs  TiledBitmapRenderer.cs  TiledBitmapStyle.cs  VelocityIndicatorRenderer.cs  VelocityIndicatorStyle.cs  VisibleFeatureIterator.cs
src/TacControl.Common/Modules/: ImageDirectory.cs  ModuleACE.cs  ModuleCore.cs  ModuleGPS.cs  ModuleGameInfo.cs  ModuleMarker.cs  ModuleNote.cs  ModuleRadio.cs  ModuleStreamManager.cs  ModuleVehicle.cs
src/TacControl.Server/: GameState.cs  Networking.cs  Program.cs  TacControl.Server.csproj  TacControl.Server.sln
src/TacControl.Server/Modules/: IModule.cs  ImageDirectory.cs  ModuleGameInfo.cs  ModuleMarker.cs
(+128 files in other folders)
